[package]
name = "lendpool"
version = "0.1.0"
edition = "2021"
description = "A simple lock-free library for allowing safe and concurrent access to a group of objects"

[dependencies]
crossbeam-queue = { version = "0.3.12" }

# features async
tokio = { version = "1.42.0" ,features = ["sync"], optional = true }

[dev-dependencies]
tokio = {version = "1.42.0", features = ["full"]}


[features]
default = []
sync = []
async = ["tokio"]
